<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.PublicacionFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imgAuto"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="left"
                android:src="@drawable/ic_baseline_directions_car_24"
                android:contentDescription="@string/descripcion"
                android:transitionName="@string/titulo"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contratoCardViewText"
                android:layout_marginTop="28dp"
                android:textSize="35sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tituloPublicacion"
                app:startIconDrawable="@drawable/ic_baseline_info_24"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vehiculoItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vehiculoCardViewText"
                app:startIconDrawable="@drawable/ic_baseline_directions_car_24"
                app:endIconMode="dropdown_menu"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                <AutoCompleteTextView
                    android:id="@+id/list_itemFrag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/valor_diario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/valor"
                app:startIconDrawable="@drawable/ic_baseline_monetization_on_24"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/superaVelocidad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/exvelocidad"
                    android:layout_weight="1"
                    app:startIconDrawable="@drawable/ic_baseline_monetization_on_24"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/limiteChoques"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/danio"
                    android:layout_weight="1"
                    app:startIconDrawable="@drawable/ic_choque"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/maletaTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/limite"
                app:startIconDrawable="@drawable/ic_baseline_pin_drop_24"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/valorLimite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/valorLimite"
                app:startIconDrawable="@drawable/ic_baseline_monetization_on_24"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/pagoanticipado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="false"
                android:text="@string/pagoanticipado" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/tanquefull"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="false"
                android:text="@string/tanquefull" />

            <Button
                android:id="@+id/btnRegistroVehiculo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/registrarButton" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>