<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.VehiculoDesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imgAuto"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="left"
                android:src="@drawable/ic_baseline_directions_car_24"
                android:contentDescription="@string/descripcion"
                android:transitionName="@string/titulo"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehiculoCardViewText"
                android:layout_marginTop="28dp"
                android:textSize="35sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/placaTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placa"
                app:startIconDrawable="@drawable/ic_matricula"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/marcaTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/marca"
                app:startIconDrawable="@drawable/ic_baseline_star_border_24"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/modeloTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/modelo"
                app:startIconDrawable="@drawable/ic_baseline_star_border_24"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/anioTextInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/anio"
                    android:layout_weight="1"
                    app:startIconDrawable="@drawable/ic_baseline_calendar_today_24"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/traccionTextInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/traccion"
                    android:layout_weight="1"
                    app:startIconDrawable="@drawable/ic_traction"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/transmisionTextInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/transmision"
                    android:layout_weight="1"
                    app:startIconDrawable="@drawable/ic_gearshift"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/puertaTextInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/puertas"
                    android:layout_weight="1"
                    app:startIconDrawable="@drawable/ic_door"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/maletaTextInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/maletas"
                    android:layout_weight="1"
                    app:startIconDrawable="@drawable/ic_baseline_backpack_24"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pasajeroTextInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/pasajeros"
                    android:layout_weight="1"
                    app:startIconDrawable="@drawable/ic_user"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/airCheck"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="false"
                android:text="@string/aire" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/sunroofCheck"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sunroof" >
            </com.google.android.material.checkbox.MaterialCheckBox>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/gpsTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gps"
                app:startIconDrawable="@drawable/ic_gps"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnRegistroVehiculo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/registrarButton" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>