<?xml version="1.0" encoding="utf-8"?>

<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="Deprecated">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="35dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnEnviar"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/buscar" />

            </LinearLayout>

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="25dp"
                tools:context=".activities.MonitoreoActivity" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="190dp">

                <Button
                    android:id="@+id/btnOn"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bloquear" />

                <Button
                    android:id="@+id/btnOff"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/desbloquear" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</AbsoluteLayout>

