<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="Deprecated"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <Spinner
                    android:id="@+id/list_Carros"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btnBuscar"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/buscar" />

            </LinearLayout>

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_marginTop="5dp"
                tools:context=".MapsActivity" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/logMonitoreo"
                android:layout_width="match_parent"
                android:layout_height="293dp"
                android:layout_marginTop="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnOn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bloquear"
                    style="@style/Widget.MaterialComponents.Button.TextButton"/>

                <Button
                    android:id="@+id/btnOff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/desbloquear"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</AbsoluteLayout>

